# feedback-loop-clone

./: .gitignore  .pylintrc  README.md  databricks.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: databricks-cicd.yml
app/: app.py  app.yaml  requirements.txt
app/feedback_api/: __init__.py  api.py  env_utils.py  identifiers.py  linking.py  models.py  observability.py  policy.py  rate_limit.py  sql_utils.py  storage.py  validation.py
resources/apps/: feedback_api.yml
resources/jobs/: feedback_table_ddl.yml  feedback_table_maintenance.yml  link_feedback_stream.yml  reconcile_feedback_links.yml
scripts/: maintain_feedback_table.py  purge_feedback.py  reconcile_feedback_links.py  stream_linking.py
sql/: feedback_table.sql
tests/: conftest.py  test_api.py  test_identifiers.py  test_linking.py  test_maintain_feedback_table.py  test_observability.py  test_policy.py  test_purge_feedback.py  test_rate_limit.py  test_reconcile_feedback_links.py  test_sql_utils.py  test_storage.py  test_stream_linking.py  test_validation.py
tests/integration/: test_databricks_sql_smoke.py
