[project]
name = "feedback-loop"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
	"databricks-sdk>=0.82.0",
	"fastapi>=0.128.0",
	"pandas>=2.3.3",
	"pydantic>=2.12.5",
	"pylint>=4.0.4",
	"uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
	"httpx>=0.28.1",
	"databricks-connect>=15.4.0",
	"pytest>=9.0.2",
]
